--- a/OneInc.Server/appsettings.json
+++ b/OneInc.Server/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DelayRange": {
+    "Min": 1,
+    "Max": 5
+  }
 }
