--- a/oneinc.client/package.json
+++ b/oneinc.client/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-signalr": "^0.2.18",
-    "socket.io-client": "^4.7.2"
+    "react-bootstrap": "^2.9.2",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
